syntax = "proto3";

service grpc_vst_communicator {
  rpc com_grpc_dispatcher (grpc_dispatcher_Request) returns (grpc_dispatcher_Reply) {}
  rpc com_grpc_processReplacing (grpc_processReplacing_Request) returns (grpc_processReplacing_Reply) {}
  rpc com_grpc_setParameter (grpc_setParameter_Request) returns (grpc_setParameter_Reply) {}
  rpc com_grpc_getParameter (grpc_getParameter_Request) returns (grpc_getParameter_Reply) {}
  rpc com_grpc_updateAEffect (grpc_updateAEffect_Request) returns (grpc_updateAEffect_Reply) {}
  rpc com_grpc_sendHwndMsg (grpc_sendHwndMsg_Request) returns (grpc_sendHwndMsg_Reply) {}
  rpc com_grpc_stopServer (grpc_stopServer_Request) returns (grpc_stopServer_Reply) {}
}

// Client->
message grpc_dispatcher_Request {
	int32 param1 = 1;
	int32 param2 = 2;
	int64 param3 = 3;
	float param4 = 4;
	int64 ptr_value = 5;
	bytes ptr_data = 6;
	int32 ptr_size = 7;
}

// Server->
message grpc_dispatcher_Reply {
	int64 returnVal = 1;
	bytes ptr_data = 2;
	
	int32 magic = 3;
	int32 numPrograms = 4;
	int32 numParams = 5;
	int32 numInputs = 6;
	int32 numOutputs = 7;
	int32 flags = 8;
	int32 initialDelay = 9;
	int32 uniqueID = 10;
	int32 version = 11;
}

// Client->
message grpc_processReplacing_Request {
	int32 frames = 1;
	int32 arraySize = 2;
	bytes adata = 3;
	bytes bdata = 4;
}

// Server->
message grpc_processReplacing_Reply {
	int32 frames = 1;
	int32 arraySize = 2;
	bytes adata = 3;
	bytes bdata = 4;
	
	int32 magic = 5;
	int32 numPrograms = 6;
	int32 numParams = 7;
	int32 numInputs = 8;
	int32 numOutputs = 9;
	int32 flags = 10;
	int32 initialDelay = 11;
	int32 uniqueID = 12;
	int32 version = 13;
}

// Client->
message grpc_setParameter_Request {
	int32 param1 = 1;
	float param2 = 2;
}

// Server->
message grpc_setParameter_Reply {
	int32 magic = 1;
	int32 numPrograms = 2;
	int32 numParams = 3;
	int32 numInputs = 4;
	int32 numOutputs = 5;
	int32 flags = 6;
	int32 initialDelay = 7;
	int32 uniqueID = 8;
	int32 version = 9;
}

// Client->
message grpc_getParameter_Request {	
	int32 param1 = 1;
}

// Server->
message grpc_getParameter_Reply {	
	float returnVal = 1;
	
	int32 magic = 2;
	int32 numPrograms = 3;
	int32 numParams = 4;
	int32 numInputs = 5;
	int32 numOutputs = 6;
	int32 flags = 7;
	int32 initialDelay = 8;
	int32 uniqueID = 9;
	int32 version = 10;
}

// Client->
message grpc_updateAEffect_Request {	
	int32 nullreply = 1;
}

// Server->
message grpc_updateAEffect_Reply {	
	int32 magic = 1;
	int32 numPrograms = 2;
	int32 numParams = 3;
	int32 numInputs = 4;
	int32 numOutputs = 5;
	int32 flags = 6;
	int32 initialDelay = 7;
	int32 uniqueID = 8;
	int32 version = 9;
}

// Client->
message grpc_sendHwndMsg_Request {
	int32 msgType = 1;
}

// Server->
message grpc_sendHwndMsg_Reply {
	int32 nullreply = 1;
}

// Client->
message grpc_stopServer_Request {
	int32 nullreply = 1;
}

// Server->
message grpc_stopServer_Reply {
	int32 nullreply = 1;
}
